[package]
name = "arbitrage_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.15"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
config = "0.10"
serde = "1.0"
serde_derive = "1.0"
